Issue 1317:  	 Scrollbar in "Edit" view rendered half-invisible  Not a perfect solution as the editor needs space on the left.
http://code.google.com/p/fbug/source/detail?r=1534

--- a/extension/skin/classic/panelbase.css
+++ b/extension/skin/classic/panelbase.css
@@ -266,7 +266,7 @@ h1.groupHeader {
     height: 100% !important;
     margin: 0;
     border: none;
-    padding-left: 8px;
+    /* padding-left: 8px; XXXjjb issue 1317 Causes the scrollbar on long sources to be hidden under the divider */
     font-family: Monaco, monospace;
     font-size: Inherit;
 }
